fix: button icons and titles

--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
     <div id="main"></div>
     <div id="controls">
       <div id="direction">
-        <button id="up">
+        <button id="up" title="up">
           <ion-icon name="arrow-up-outline"></ion-icon>
         </button>
         <div>
-          <button id="left">
-            <ion-icon name="arrow-down-outline"></ion-icon>
+          <button id="left" title="left">
+            <ion-icon name="arrow-back-outline"></ion-icon>
           </button>
-          <button id="right">
-            <ion-icon name="arrow-down-outline"></ion-icon>
+          <button id="right" title="right">
+            <ion-icon name="arrow-forward-outline"></ion-icon>
           </button>
         </div>
-        <button id="down">
+        <button id="down" title="down">
           <ion-icon name="arrow-down-outline"></ion-icon>
         </button>
       </div>
       <div id="actions">
-        <button id="read">
+        <button id="read" title="read">
           <ion-icon name="book-outline"></ion-icon>
         </button>
-        <button id="toggleGift">
+        <button id="toggleGift" title="toggle gift">
           <ion-icon name="gift-outline"></ion-icon>
         </button>
       </div>
